<resources>
    <string name="app_name">书会</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="theme">主题</string>
    <string name="cancel">取消</string>
    <string name="done">完成</string>
    <string name="about_me">\n简 书：<a href="http://www.jianshu.com/users/f07458c1a8f3/top_articles">dongjunkun</a>\n\nGithub：<a href="https://github.com/dongjunkun">dongjunkun</a></string>
    <string name="all">全部</string>
    <string name="close">关闭</string>
    <string name="setting">设置</string>
    <string name="fuli">福利</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="video">休息视频</string>
    <string name="front">前端</string>
    <string name="resource">拓展资源</string>
    <string name="app">App</string>
    <string name="about">关于我</string>
    <string name="more">瞎推荐</string>

    <string name="not_login">未登录</string>
    <string name="homepage">主页</string>
    <string name="mall">书城</string>
    <string name="record">我的记录</string>
    <string name="contact">联系人</string>
    <string name="self">个人中心</string>

    <string-array name="grace_logo_strings">
       <item>M1020,1642c-22,-18,-22,-19,-11,-158,6,-76,14,-165,18,-196,6,-61,-2,-72,-32,-42,-9,9,-19,14,-22,11,-3,-4,-20,5,-38,18,-17,14,-36,25,-42,25,-5,0,-19,9,-31,20,-12,11,-33,25,-47,30,-14,5,-25,16,-25,25,0,8,-4,15,-10,15,-5,0,-10,-5,-10,-11,0,-6,-5,-9,-11,-7,-6,2,-10,8,-10,13,0,14,-40,55,-53,55,-9,0,-102,42,-178,81,-10,5,-24,9,-32,9,-7,0,-20,9,-27,21,-13,18,-27,21,-133,26,-106,4,-121,3,-145,-14,-14,-11,-40,-25,-57,-32,-28,-11,-60,-54,-56,-73,1,-5,-3,-8,-8,-8,-6,0,-10,-12,-10,-27,0,-14,-7,-35,-17,-45,-11,-13,-12,-18,-3,-18,9,0,10,-3,1,-14,-14,-17,-18,-117,-6,-136,12,-20,17,-48,16,-99,-2,-47,20,-105,48,-131,9,-8,32,-46,50,-83,32,-66,50,-90,154,-199,26,-28,47,-53,47,-56,0,-8,239,-241,300,-293,131,-111,397,-269,479,-285,17,-4,31,-10,31,-14,0,-4,26,-16,58,-26,46,-15,83,-18,196,-16,83,1,142,6,146,12,4,6,14,8,23,4,18,-6,22,3,9,22,-11,17,-41,30,-230,104,-410,159,-487,208,-806,510,-211,200,-385,481,-403,651l-6,57,47,50c39,41,54,50,92,56,61,8,176,-11,242,-40,30,-13,59,-24,63,-24,5,0,27,-11,49,-25,22,-14,40,-23,40,-20,0,2,15,-4,33,-15,61,-37,127,-70,127,-64,0,3,12,-3,28,-14,15,-11,42,-23,59,-27,18,-3,35,-11,38,-16,4,-5,16,-9,29,-9,37,0,75,-57,48,-74,-5,-3,-41,0,-81,5,-64,9,-75,8,-92,-7,-23,-21,-25,-57,-4,-78,15,-15,27,-18,135,-33l55,-8,8,-70c9,-75,27,-105,62,-105,38,0,55,30,55,98l0,62,48,-6c26,-3,60,-7,76,-10,54,-8,85,46,52,91,-11,15,-35,22,-102,30l-89,10,-6,60c-4,33,-12,130,-19,215,-18,234,-25,259,-71,260,-9,0,-27,-8,-39,-18z</item>
       <item>M1568,1596c-37,-13,-116,-50,-175,-82,-135,-72,-151,-80,-186,-93,-23,-9,-28,-16,-25,-38,3,-25,9,-28,85,-44,93,-20,138,-40,154,-70,14,-27,4,-80,-21,-112,-17,-21,-18,-29,-7,-56,6,-17,15,-31,18,-31,4,0,24,23,45,51,59,81,58,184,-2,224,-13,8,-49,22,-80,30,-31,8,-59,17,-61,19,-8,8,231,127,315,157,79,27,101,41,102,62,0,16,-98,5,-162,-17z</item>
       <item>M2207,1583c-8,-21,-18,-56,-21,-79,-10,-55,-41,-104,-66,-104,-45,0,-256,51,-265,64,-5,8,-18,29,-28,46,-15,28,-21,31,-45,25,-15,-4,-29,-8,-31,-11,-7,-7,110,-206,156,-267,51,-66,179,-197,192,-197,20,0,175,489,169,532,-2,14,-11,24,-24,26,-17,2,-25,-5,-37,-35zm-184,-224l108,-22,-6,-31c-13,-61,-36,-136,-45,-141,-8,-5,-111,106,-164,178,-34,44,-35,44,107,16z</item>
       <item>M2510,1589c-89,-37,-130,-120,-111,-224,20,-107,87,-197,183,-246,53,-28,165,-36,238,-19,48,11,53,11,74,-9,12,-11,27,-21,34,-21,18,0,25,63,12,109,-13,48,-18,48,-100,5,-50,-27,-118,-31,-180,-13,-94,28,-189,140,-190,222,0,42,19,96,42,114,28,24,112,33,200,22,212,-25,210,-25,206,2,-5,38,-95,61,-253,65,-76,2,-140,0,-155,-7z</item>
       <item>M3122,1569c-41,-8,-52,-17,-68,-54,-23,-56,4,-371,38,-437,8,-16,27,-18,201,-17,228,2,252,5,252,38l0,23,-197,2c-235,1,-230,-1,-236,106l-4,70,68,0c38,0,104,-5,146,-12,43,-6,81,-8,85,-4,5,4,-4,18,-19,31,-28,24,-120,45,-196,45,-22,0,-52,4,-66,10,-22,8,-26,16,-26,50,0,30,7,47,25,65,28,29,33,29,284,30,153,0,175,2,185,17,7,11,7,21,1,27,-11,11,-427,20,-473,10z</item>
    </string-array>

    <integer-array name="grace_logo_colors">
        <item>@color/colorRedPrimary</item>
        <item>@color/colorGreenPrimary</item>
        <item>@color/colorPurplePrimary</item>
        <item>@color/colorCyanPrimary</item>
        <item>@color/colorLimePrimary</item>
    </integer-array>

</resources>
