<?xml version="1.0" encoding="utf-8"?>
<com.grace.book.widget.ResideLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resideLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.MainActivity">

    <com.grace.book.widget.theme.ColorRelativeLayout
        android:id="@+id/iv_right"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/menuBackground">

        <LinearLayout
            android:id="@+id/top_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="35dp"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="80dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/not_login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_normal"/>

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_menu"
            android:layout_below="@+id/top_menu"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/home"
                    style="@style/MenuStyle"
                    android:text="@string/homepage"/>

                <TextView
                    android:id="@+id/mall"
                    style="@style/MenuStyle"
                    android:text="@string/mall"/>

                <TextView
                    android:id="@+id/record"
                    style="@style/MenuStyle"
                    android:text="@string/record"/>

                <TextView
                    android:id="@+id/contact"
                    style="@style/MenuStyle"
                    android:text="@string/contact"/>

                <TextView
                    android:id="@+id/self"
                    style="@style/MenuStyle"
                    android:text="@string/self"/>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/bottom_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:padding="12dp"
                android:text="主题"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

        </LinearLayout>

    </com.grace.book.widget.theme.ColorRelativeLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"/>

</com.grace.book.widget.ResideLayout>
